Fixes: - Possible fix for spawning ruins on heavy oil (Fulgora) or lava (Vulcanus)   or anything not ground
Changes:
- more assertions added
- more debug lines added (for checking if above fix works)
- reformatted some one-line code
- added debug messages and global runtime setting (map) for intense debugging

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,13 +1,15 @@
 [mod-setting-name]
-AbandonedRuins-enemy-not-cease-fire=Hostile ruin defenses [img=info]
-ruins-min-distance-from-spawn=Minimum distance from spawn [img=info]
-ruins-large-ruin-chance=Chance for a large ruin per chunk [img=info]
-ruins-medium-ruin-chance=Chance for a medium ruin per chunk [img=info]
-ruins-small-ruin-chance=Chance for a small ruin per chunk [img=info]
-AbandonedRuins-set=Ruin set [img=info]
+AbandonedRuins-enemy-not-cease-fire=Hostile ruin defenses
+AbandonedRuins-enable-debug-log=Enable debug log (not recommended)
+ruins-min-distance-from-spawn=Minimum distance from spawn
+ruins-large-ruin-chance=Chance for a large ruin per chunk
+ruins-medium-ruin-chance=Chance for a medium ruin per chunk
+ruins-small-ruin-chance=Chance for a small ruin per chunk
+AbandonedRuins-set=Ruin set
 
 [mod-setting-description]
 AbandonedRuins-enemy-not-cease-fire=If turned off, turrets and other defenses in ruins won't attack the player.
+AbandonedRuins-enable-debug-log=Enables __lots__ of debug messages. Please enable them when you want to help debugging this mod.
 ruins-min-distance-from-spawn=Minimum distance in tiles from spawn.
 ruins-large-ruin-chance=Chance to spawn a large ruin in a generated chunk, 0-1 float value, eg 0.1 is 10% chance.
 ruins-medium-ruin-chance=Chance to spawn a medium ruin in a generated chunk, 0-1 float value, eg 0.1 is 10% chance.
