--- a/locale/ko/locale.cfg
+++ b/locale/ko/locale.cfg
@@ -1,10 +1,10 @@
 [mod-setting-name]
-AbandonedRuins-enemy-not-cease-fire=적대 유적 자기방어 여부 [img=info]
-ruins-min-distance-from-spawn=시작 지점에서 유적이 나오는 최소 거리 [img=info]
-ruins-large-ruin-chance=청크 당 대형 유적이 나올 확률 [img=info]
-ruins-medium-ruin-chance=청크 당 중형 유적이 나올 확률 [img=info]
-ruins-small-ruin-chance=청크 당 소형 유적이 나올 확률 [img=info]
-AbandonedRuins-set=유적 세트 [img=info]
+AbandonedRuins-enemy-not-cease-fire=적대 유적 자기방어 여부
+ruins-min-distance-from-spawn=시작 지점에서 유적이 나오는 최소 거리
+ruins-large-ruin-chance=청크 당 대형 유적이 나올 확률
+ruins-medium-ruin-chance=청크 당 중형 유적이 나올 확률
+ruins-small-ruin-chance=청크 당 소형 유적이 나올 확률
+AbandonedRuins-set=유적 세트
 
 [mod-setting-description]
 AbandonedRuins-enemy-not-cease-fire=이 설정을 끄면, 유적 내에 있는 포탑이나 다른 방어 시설들이 플레이어를 공격하지 않습니다.
