--- a/locale/ru/locale.cfg
+++ b/locale/ru/locale.cfg
@@ -1,10 +1,10 @@
 [mod-setting-name]
-AbandonedRuins-enemy-not-cease-fire=Враждебная оборона руин [img=info]
-ruins-min-distance-from-spawn=Минимальное расстояние до руин [img=info]
-ruins-large-ruin-chance=Шанс больших руин в чанке [img=info]
-ruins-medium-ruin-chance=Шанс средних руин в чанке [img=info]
-ruins-small-ruin-chance=Шанс малых руин в чанке [img=info]
-AbandonedRuins-set=Набор руин [img=info]
+AbandonedRuins-enemy-not-cease-fire=Враждебная оборона руин
+ruins-min-distance-from-spawn=Минимальное расстояние до руин
+ruins-large-ruin-chance=Шанс больших руин в чанке
+ruins-medium-ruin-chance=Шанс средних руин в чанке
+ruins-small-ruin-chance=Шанс малых руин в чанке
+AbandonedRuins-set=Набор руин
 
 [mod-setting-description]
 AbandonedRuins-enemy-not-cease-fire=Если выключено, то турели и прочая оборона руин не будут атаковать игрока.
