--- a/locale/de/locale.cfg
+++ b/locale/de/locale.cfg
@@ -1,13 +1,15 @@
 [mod-setting-name]
-AbandonedRuins-enemy-not-cease-fire=Feindliche Runinenverteidigung [img=info]
-ruins-min-distance-from-spawn=Minimale Distanz zum Startpunkt [img=info]
-ruins-large-ruin-chance=Chance für eine grosse Ruine pro Kartenausschnitt [img=info]
-ruins-medium-ruin-chance=Chance für eine mittlere Ruine pro Kartenausschnitt [img=info]
-ruins-small-ruin-chance=Chance für eine kleine Ruine pro Kartenausschnitt [img=info]
-AbandonedRuins-set=Ruinensatz [img=info]
+AbandonedRuins-enemy-not-cease-fire=Feindliche Runinenverteidigung
+AbandonedRuins-enable-debug-log=Aktiviere Debug-Meldungen (nicht empfohlen)
+ruins-min-distance-from-spawn=Minimale Distanz zum Startpunkt
+ruins-large-ruin-chance=Chance für eine grosse Ruine pro Kartenausschnitt
+ruins-medium-ruin-chance=Chance für eine mittlere Ruine pro Kartenausschnitt
+ruins-small-ruin-chance=Chance für eine kleine Ruine pro Kartenausschnitt
+AbandonedRuins-set=Ruinensatz
 
 [mod-setting-description]
 AbandonedRuins-enemy-not-cease-fire=Wenn ausgeschaltet, greifen Geschütztürme und andere Verteidigung den Spieler nicht an.
+AbandonedRuins-enable-debug-log=Aktiviert __sehr viele__ Debug-Meldungen. Bitte aktiviere diese Option nur, wenn du beim Fehlerfinden helfen willst.
 ruins-min-distance-from-spawn=Minimale Distanz in Kacheln zum Startpunkt.
 ruins-large-ruin-chance=Chance für eine grosse Ruine in einem generierten Kartenausschnitt, 0-1 Gleitzahl, z.B. 0.1 ist 10 prozentige Chance.
 ruins-medium-ruin-chance=Chance für eine mittlere Ruine in einem generierten Kartenausschnitt, 0-1 Gleitzahl, z.B. 0.1 ist 10 prozentige Chance.
