--- a/locale/fi/locale.cfg
+++ b/locale/fi/locale.cfg
@@ -1,10 +1,10 @@
 [mod-setting-name]
-AbandonedRuins-enemy-not-cease-fire=Vihamieliset raunioiden puolustukset [img=info]
-ruins-min-distance-from-spawn=Minimietäisyys spawnista [img=info]
-ruins-large-ruin-chance=Suuren raunion mahdollisuus per lohko [img=info]
-ruins-medium-ruin-chance=Keskikokoisen raunion mahdollisuus per lohko [img=info]
-ruins-small-ruin-chance=Pienen raunion mahdollisuus per lohko [img=info]
-AbandonedRuins-set=Rauniosetti [img=info]
+AbandonedRuins-enemy-not-cease-fire=Vihamieliset raunioiden puolustukset
+ruins-min-distance-from-spawn=Minimietäisyys spawnista
+ruins-large-ruin-chance=Suuren raunion mahdollisuus per lohko
+ruins-medium-ruin-chance=Keskikokoisen raunion mahdollisuus per lohko
+ruins-small-ruin-chance=Pienen raunion mahdollisuus per lohko
+AbandonedRuins-set=Rauniosetti
 
 [mod-setting-description]
 AbandonedRuins-enemy-not-cease-fire=Jos kytketty pois, tykkitornit ja muut puolustukset eivät hyökkää pelaajaa kohti.
