Changes: - The event `on_tick` did generate to many useless messages, it is now separated from   usual debug purposes (EXTREMELY RARE USED!)

--- a/locale/de/locale.cfg
+++ b/locale/de/locale.cfg
@@ -1,6 +1,7 @@
 [mod-setting-name]
 AbandonedRuins-enemy-not-cease-fire=Feindliche Runinenverteidigung
 AbandonedRuins-enable-debug-log=Aktiviere Debug-Meldungen (nicht empfohlen)
+AbandonedRuins-enable-debug-on-tick=Aktiviere on_tick-Meldungen (SEHR VIELE MELDUNGEN)
 ruins-min-distance-from-spawn=Minimale Distanz zum Startpunkt
 ruins-large-ruin-chance=Chance für eine grosse Ruine pro Kartenausschnitt
 ruins-medium-ruin-chance=Chance für eine mittlere Ruine pro Kartenausschnitt
@@ -9,7 +10,8 @@ AbandonedRuins-set=Ruinensatz
 
 [mod-setting-description]
 AbandonedRuins-enemy-not-cease-fire=Wenn ausgeschaltet, greifen Geschütztürme und andere Verteidigung den Spieler nicht an.
-AbandonedRuins-enable-debug-log=Aktiviert __sehr viele__ Debug-Meldungen. Bitte aktiviere diese Option nur, wenn du beim Fehlerfinden helfen willst.
+AbandonedRuins-enable-debug-log=Aktiviert __viele__ Debug-Meldungen. Bitte aktiviere diese Option nur, wenn du beim Fehlerfinden helfen willst.
+AbandonedRuins-enable-debug-on-tick=Aktiviert __extrem viele__ Debug-Meldungen für das Ereignis `on_tick`. Dieses wird nur extrem selten verwendet, bitte aus lassen!
 ruins-min-distance-from-spawn=Minimale Distanz in Kacheln zum Startpunkt.
 ruins-large-ruin-chance=Chance für eine grosse Ruine in einem generierten Kartenausschnitt, 0-1 Gleitzahl, z.B. 0.1 ist 10 prozentige Chance.
 ruins-medium-ruin-chance=Chance für eine mittlere Ruine in einem generierten Kartenausschnitt, 0-1 Gleitzahl, z.B. 0.1 ist 10 prozentige Chance.
