--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,6 +1,7 @@
 [mod-setting-name]
 AbandonedRuins-enemy-not-cease-fire=Hostile ruin defenses
 AbandonedRuins-enable-debug-log=Enable debug log (not recommended)
+AbandonedRuins-enable-debug-on-tick=Enable debugging on_tick (A LOT MESSAGES)
 ruins-min-distance-from-spawn=Minimum distance from spawn
 ruins-large-ruin-chance=Chance for a large ruin per chunk
 ruins-medium-ruin-chance=Chance for a medium ruin per chunk
@@ -9,7 +10,8 @@ AbandonedRuins-set=Ruin set
 
 [mod-setting-description]
 AbandonedRuins-enemy-not-cease-fire=If turned off, turrets and other defenses in ruins won't attack the player.
-AbandonedRuins-enable-debug-log=Enables __lots__ of debug messages. Please enable them when you want to help debugging this mod.
+AbandonedRuins-enable-debug-log=Enables __many__ of debug messages. Please enable them when you want to help debugging this mod.
+AbandonedRuins-enable-debug-on-tick=Enables __extremly many__ debug messages for the event `on_tick`. This is extremely been used, please keep this disabled.
 ruins-min-distance-from-spawn=Minimum distance in tiles from spawn.
 ruins-large-ruin-chance=Chance to spawn a large ruin in a generated chunk, 0-1 float value, eg 0.1 is 10% chance.
 ruins-medium-ruin-chance=Chance to spawn a medium ruin in a generated chunk, 0-1 float value, eg 0.1 is 10% chance.
